Fixed Transgender in character fragment. Added outline