@@ -1,13 +1,13 @@
-package com.plotgen.rramirez.plotgenerator;
+package com.plotgen.rramirez.plotgenerator.Adapters;
 
 
 import android.animation.ValueAnimator;
-import android.content.Context;
 import android.graphics.Bitmap;
 import android.graphics.BitmapFactory;
 import android.media.ThumbnailUtils;
 import android.net.Uri;
 import android.support.v4.app.FragmentTransaction;
+import android.content.Context;
 import android.support.v7.app.AppCompatActivity;
 import android.support.v7.widget.RecyclerView;
 import android.view.LayoutInflater;
@@ -19,7 +19,8 @@ import android.widget.TextView;
 import com.plotgen.rramirez.plotgenerator.Common.Common;
 import com.plotgen.rramirez.plotgenerator.Fragment.Container_charbio;
 import com.plotgen.rramirez.plotgenerator.Model.Character;
-import com.plotgen.rramirez.plotgenerator.Model.Project;
+import com.plotgen.rramirez.plotgenerator.R;
+import com.plotgen.rramirez.plotgenerator.items.item_character_list;
 
 import java.util.List;
 
@@ -29,14 +30,14 @@ import static com.plotgen.rramirez.plotgenerator.Common.Constants.THUMBNAIL_SIZE
  * Created by macintosh on 22/08/18.
  */
 
-public class Adapter_projectList extends RecyclerView.Adapter<Adapter_projectList.myViewHolder> {
+public class Adapter_characterList extends RecyclerView.Adapter<Adapter_characterList.myViewHolder> {
 
     Context mContext;
-    List<item_project_list> mData;
-    String projectID;
+    List<item_character_list> mData;
+    String charID;
 
 
-    public Adapter_projectList(Context mContext, List<item_project_list> mData) {
+    public Adapter_characterList(Context mContext, List<item_character_list> mData) {
         this.mContext = mContext;
         this.mData = mData;
     }
@@ -46,27 +47,34 @@ public class Adapter_projectList extends RecyclerView.Adapter<Adapter_projectLis
     @Override
     public myViewHolder onCreateViewHolder(ViewGroup parent, int viewType) {
         LayoutInflater inflater = LayoutInflater.from(mContext);
-        View v = inflater.inflate(R.layout.project_list_item, parent, false);
+        View v = inflater.inflate(R.layout.character_list_item, parent, false);
         return new myViewHolder(v, mContext,mData);
     }
 
     @Override
     public void onBindViewHolder(final myViewHolder holder, int position) {
 
+        if(mData.get(position).getImage().equals("android.resource://com.plotgen.rramirez.plotgenerator/drawable/ic_menu_camera"))
+        {
+            holder.image.setImageURI(Uri.parse(mData.get(position).getImage()));
+        } else {
+            Bitmap ThumbImage = ThumbnailUtils.extractThumbnail(BitmapFactory.decodeFile(mData.get(position).getImage()), THUMBNAIL_SIZE, THUMBNAIL_SIZE);
+            holder.image.setImageBitmap(ThumbImage);
+        }
         holder.name.setText(mData.get(position).getName());
-        holder.genre.setText(mData.get(position).getgenre());
+        holder.role.setText(mData.get(position).getRole());
 
         //Animated text
         ValueAnimator projectsAnimator = new ValueAnimator();
-        projectsAnimator.setObjectValues(0, Integer.parseInt(mData.get(position).getcharacters()));// here you set the range, from 0 to "count" value
+        projectsAnimator.setObjectValues(0, Integer.parseInt(mData.get(position).getCompletion()));// here you set the range, from 0 to "count" value
         projectsAnimator.addUpdateListener(new ValueAnimator.AnimatorUpdateListener() {
             public void onAnimationUpdate(ValueAnimator animation) {
-                holder.characters.setText(String.valueOf(animation.getAnimatedValue()));
+                holder.completion.setText(String.valueOf(animation.getAnimatedValue()) + "%");
             }
         });
         projectsAnimator.setDuration(500); // here you set the duration of the anim
         projectsAnimator.start();
-        projectID = mData.get(position).getId();
+        charID = mData.get(position).getId();
     }
 
     @Override
@@ -76,16 +84,18 @@ public class Adapter_projectList extends RecyclerView.Adapter<Adapter_projectLis
 
     public class myViewHolder extends RecyclerView.ViewHolder implements View.OnClickListener{
 
-        TextView name,genre,characters;
+        ImageView image;
+        TextView name,role,completion;
         Context mContext;
-        List<item_project_list> mData;
-        String projectID;
+        List<item_character_list> mData;
+        String charID;
 
-        public myViewHolder(View itemView, Context mContext, List<item_project_list> mData){
+        public myViewHolder(View itemView, Context mContext, List<item_character_list> mData){
             super (itemView);
-            name = itemView.findViewById(R.id.project_name_lv);
-            genre = itemView.findViewById(R.id.project_genre_lv);
-            characters = itemView.findViewById(R.id.project_completion_lv);
+            image = itemView.findViewById(R.id.character_image_list_view);
+            name = itemView.findViewById(R.id.character_name_list_view);
+            role = itemView.findViewById(R.id.character_role_list_view);
+            completion = itemView.findViewById(R.id.character_completion_list_view);
 
             this.mContext = mContext;
             this.mData = mData;
@@ -96,18 +106,20 @@ public class Adapter_projectList extends RecyclerView.Adapter<Adapter_projectLis
         public void onClick(View view)
         {
             String clicked = mData.get(getAdapterPosition()).getName();
-            String genre = mData.get(getAdapterPosition()).getgenre();
-            Integer characters = Integer.valueOf(mData.get(getAdapterPosition()).getcharacters());
-            projectID = mData.get(getAdapterPosition()).getId();
-            Project project = new Project(projectID,clicked);
-            Common.currentProject = project;
+            String role = mData.get(getAdapterPosition()).getRole();
+            String gender = mData.get(getAdapterPosition()).getGender();
+            Integer completion = Integer.valueOf(mData.get(getAdapterPosition()).getCompletion());
+            charID = mData.get(getAdapterPosition()).getId();
+            Character character = new Character(charID,clicked,Common.currentProject.getName(),role,gender,completion);
+            Common.currentCharacter = character;
             nextFragment(mContext);
         }
 
     }
 
+
     public void nextFragment(Context context){
-                CharListFragment nextFragment = new CharListFragment();
+                Container_charbio nextFragment = new Container_charbio();
                 //Make the transaction
                 AppCompatActivity activity = (AppCompatActivity) context;
                 FragmentTransaction transaction = activity.getSupportFragmentManager().beginTransaction();
